# esp32_qr_code_decoder

./: .gitignore  CMakeLists.txt
esp-code-scanner/include/: esp_code_scanner.h
examples/camera_qr_code_decoder/: CMakeLists.txt
examples/camera_qr_code_decoder/main/: CMakeLists.txt  Kconfig.projbuild  camera_config.h  idf_component.yml  main.cpp
inc/: espressif_qr_code_decoder.hpp  i_qr_code_decoder.hpp  quirc_qr_code_decoder.hpp
quirc/: collections.c  collections.h  decode.c  identify.c  quirc.c  quirc.h  quirc_memory.h
src/: espressif_qr_code_decoder.cpp  quirc_qr_code_decoder.cpp
